Fix charge-library preview, so it is also visible when scrolling

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -98,8 +98,12 @@ form .error label {
   color: #b44;
 }
 
-.spacer {
+.horizontal-spacer {
   display: inline-block;
+}
+
+.spacer {
+  display: block;
 }
 
 label div {
